# azure-ai-agents-playbook

./: .env.sample  .gitignore  NOTEBOOK_TEST_RUNNER.md  README.md  notebook_test_results.html  notebook_test_runner.py  pyproject.toml  requirements.txt
.github/workflows/: nightly-notebook-tests.yml
01-agent-basics/: 01.1-azure_ai_agents_foundry_sdk_tutorial.ipynb  01.2-azure_ai_agents_semantic_kernel_tutorial.ipynb  01.3-python_with_statement_agents_tutorial.ipynb  README.md
02-agent-custom-functions/: 02.2-azure_ai_agents_semantic_kernel_plugins_tutorial.ipynb  README.md
02-agent-functions/: 02.1-azure_ai_agents_functions_foundry_sdk_tutorial.ipynb
03-orchestrated-agents/: 03.1-concurrent_and_sequential_orchestration_tutorial.ipynb  03.2-connected_agents_tutorial.ipynb  README.md
04-orchestrated-agents-with-tools/: 04.1-openapi_currency_exchange_tutorial.ipynb  04.2-hybrid_openapi_and_plugins_tutorial.ipynb  04.3-logic_apps_hybrid_tutorial.ipynb  README.md
04-orchestrated-agents-with-tools/infra/: main.bicep  main.parameters.json
05-orchestrated-agents-with-custom-openapi-tools/: 05.1-fastapi_openapi_tutorial.ipynb  Dockerfile  README.md  azure.yaml  bank_transactions_api.py  definition_openapi.json
06-magentic-one-orchestration/: 06.1-magentic_creative_writing_tutorial.ipynb  06.2-magentic_bing_search_orchestration_tutorial.ipynb  README.md
07-voice-orchestration/: 07.1-voice-email-demo.py  README.md  requirements.txt  voice.py
08-voice-orchestration/: voice.py
09-advanced-orchestrated-agents/: README.md
(+10 files in other folders)
